# chess-on-console

./: README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py  system.py
src/helpers/: __init__.py  config.py  console.py  constants.py  custom_errors.py  functions.py
src/models/: __init__.py  board.py  game.py  piece.py  pieces.py
src/models/game_modes/: __init__.py  chess960.py  standard.py
src/models/pieces/: __init__.py  standard.py
