[tool.poetry]
name = "chess-on-console"
version = "0.1.0"
description = "A command line chess console"
authors = ["Santicm23 <santicastrom@outlook.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "chess_on_console"}]

[tool.poetry.dependencies]
python = "^3.11"
questionary = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
